# ClientBedrock

./: .gitignore  Discord.cmd  Readme  Readme.md  config.json  説明.md
inno/configManage/: SetShortcutRunAsAdmin.ps1  main.iss
inno/main/: main.iss
minecraft/AIHouse/: house.json  package-lock.json  package.json
minecraft/AIHouse/src/: LocalAI.ts  index.ts  old.ts
minecraft/ChangeProcess/: .gitignore  package-lock.json  package.json
minecraft/ChangeProcess/src/: index.ts
minecraft/Goto/: .gitignore  Server.py  build.py  index.py  learn.py  show.py
minecraft/Skin/: .gitignore  LICENSE  LICENSE.txt  clear-icon-cache.bat  installer.nsh  package-lock.json  package.json
minecraft/Skin/src/: index.ts  main.ts  preload.ts
minecraft/Skin/src/renderer/: index.html  renderer.js
minecraft/Skin/src/renderer/css/: base.css  components.css  layout.css  (+1 more)
minecraft/autoSave/: package-lock.json  package.json
minecraft/autoSave/src/: index.ts
minecraft/setuptool/: package-lock.json  package.json  tsconfig.json
minecraft/setuptool/src/: index.ts  package.json  tsconfig.json
minecraft/skin/: package-lock.json  package.json
minecraft/skin/src/: index.ts
minecraft/skin/src/authentication_tokens/: da39a3_bed-cache.json  da39a3_live-cache.json  da39a3_xbl-cache.json
minecraft/worldlist/: package-lock.json  package.json
minecraft/worldlist/src/: index.ts
minecraft/ws/: package-lock.json  package.json
minecraft/ws/src/: aasa.js  auto.ts  import.ts  index.ts  package-lock.json  package.json  playerData.json  version.ts
minecraft/ws/src/Servers/: backend.ts  import.ts  playerData.json
minecraft/ws/src/command/: about.ts  help.ts  info.ts  ping.ts  spam.ts  test.ts
minecraft/ws/src/module/: DataBase.ts
other/AISystem/: .gitignore  README.md  index.html  requirements.txt
other/AISystem/modules/: scripts.js  style.css
other/AISystem/src/: index.py  server.py  test.py
other/AISystem/src/Test/: ModelProvider.py  TextGen.py  imageGen.py
other/AISystem/src/har_and_cookies/: .nodriver_is_open
other/PEXtool/: .gitignore  installer.nsh  package-lock.json  package.json  tsconfig.json
other/PEXtool/src/: main.ts  preload.ts
other/PEXtool/src/renderer/: index.html  renderer.js
other/Tauri/: .gitignore  README.md  allupx.bat  build-optimized.bat  next.config.js  package-lock.json  package.json  pex.txt  tsconfig.json
other/Tauri/lib/: lib.tsx
other/Tauri/pages/: _app.tsx  index.tsx
other/Tauri/pages/styles/: globals.css
other/Tauri/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
other/Tauri/src-tauri/capabilities/: default.json
other/Tauri/src-tauri/icons/: icon.icns
other/Tauri/src-tauri/src/: main.rs  scan_pex.rs
other/configMane/: README.md  STYLE_GUIDE.md  build-optimized.bat  next.config.js  package-lock.json  package.json  pex.txt
other/configMane/pages/: _app.tsx  index.tsx
other/configMane/pages/styles/: components.css  globals.css  layout.css  optimized.css  tsx-enhanced.css  utilities.css
other/configMane/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
other/configMane/src-tauri/src/: config.rs  main.rs  scan_pex.rs
other/database/: .gitignore  package-lock.json  package.json
other/database/db/hi/: data.json
other/database/src/: index.ts  test.ts  test2.ts
other/discord/: .gitignore  package-lock.json  package.json
other/discord/src/: database.ts  index.ts
other/discord/src/System/: LocalAI.ts  gasDB.ts
other/discord/src/modules/: import.ts  static-loader.ts
other/discord/src/types/: command.ts
other/genScript/: package.json
other/openProcess/: package.json
other/openProcess/src/: index.ts
other/port/: .gitignore  config.json  package-lock.json  package.json
other/port/src/: index.ts
other/simpleElectorn/: DEVELOPER_GUIDE.md  FAQ.md  PROJECT_SUMMARY.md  README.md  TUTORIAL.md  installer.nsh  package-lock.json  package.json
other/simpleElectorn/src/: main.ts  preload.ts
other/simpleElectorn/src/renderer/: index.html  renderer.js  styles.css
other/startup/: package-lock.json
other/startup/src/: index.ts
other/task/: package-lock.json  package.json
other/task/src/: index.ts  tasks.json
other/test/: README
other/test/src/: index.c++
src/: scripts.js
(+24 files in other folders)
