[package]
name = "check"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "check_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"


[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"

[profile.release]
opt-level = "z"          # サイズ最適化
lto = "fat"              # 積極的なLink Time Optimization
codegen-units = 1        # コード生成単位を1に（最適化優先）
panic = "abort"          # パニック時の処理を軽量化
strip = "symbols"        # シンボル情報を削除
debug = false            # デバッグ情報を完全に無効化
incremental = false      # インクリメンタルコンパイルを無効化（サイズ優先）
overflow-checks = false  # オーバーフローチェックを無効化（パフォーマンス優先）
